2005-07-21  DJ Delorie  <dj@redhat.com>

	* toplev.c (warn_deprecated_use): Add warning control to warning
	call.
	* c-typeck.c (parser_build_binary_op): Likewise.
	(c_finish_if_stmt): Likewise.
	* c-common.c (check_function_sentinel): Likewise.
	(check_nonnull_arg): Likewise.

2005-07-21  Richard Henderson  <rth@redhat.com>

	PR tree-opt/22504
	* tree-complex.c (complex_ssa_name_components): New.
	(cvc_lookup): Allow entry not found.
	(create_components): Remove.
	(create_one_component_var, get_component_var): New.
	(get_component_ssa_name, set_component_ssa_name): New.
	(extract_component): Use get_component_ssa_name.
	(update_complex_components): Use set_component_ssa_name.
	(update_complex_components_on_edge): Likewise.
	(update_phi_components): Create new PHI nodes directly, instead
	of adding insns to edges.
	(tree_lower_complex): Allocate and free complex_variable_components
	and complex_ssa_name_components here.

2005-07-20  Daniel Berlin  <dberlin@dberlin.org>
	
	* alias.c (nonoverlapping_component_refs_p): Use TYPE_MAIN_VARIANT,
	revert to returning false.

2005-07-21  Uros Bizjak  <uros@kss-loka.si>

        PR target/21149
        * config/i386/i386.md (sse_movhlps): Fix vec_select values.

2005-07-21  Uros Bizjak  <uros@kss-loka.si>

	PR target/22576
	* config/i386/i386.md (cmpxf): Change operand constraints
	to "nonmemory_operand".

2005-07-21  Andrew Pinski  <pinskia@physics.uc.edu>

	* config/i386/i386.md (trap): Use "".word/t0x0b0f" instead of ud2.

2005-07-21  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/21180
	* fold-const.c (fold_build1): Add checksum for the operands.
	(fold_build2): Likewise.	
	(fold_build3): Likewise.

2005-07-21  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/19055
	* fold-const.c (fold_binary): Transform "(X | Y) ^ X" to "Y & ~ X".

2005-07-21  Paolo Bonzini  <bonzini@gnu.org>

	* common.opt (-fforward-propagate): Committed by mistake,
	removed.
